[feat] Added exception situation : Unable to delete reservation if already visited